[gd_scene load_steps=6 format=2]

[ext_resource path="res://img/background_tomatero.png" type="Texture" id=1]
[ext_resource path="res://theme/tomatero_theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/Button.gd" type="Script" id=3]
[ext_resource path="res://music/Title Theme.wav" type="AudioStream" id=4]
[ext_resource path="res://anims/tomatero.tres" type="SpriteFrames" id=5]

[node name="Control" type="Control" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 360.0
margin_bottom = 540.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="background" type="Sprite" parent="." index="0"]

position = Vector2( 180, 270.811 )
scale = Vector2( 1.11297, 0.841217 )
texture = ExtResource( 1 )

[node name="start_button" type="Button" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -180.0
margin_right = 80.0
margin_bottom = -120.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "start"
flat = false
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Theme" ]

[node name="shop_button" type="Button" parent="." index="2"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -110.0
margin_right = 62.0
margin_bottom = -50.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "shop"
flat = false
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Theme" ]

[node name="credits_button" type="Button" parent="." index="3"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -40.0
margin_right = 82.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 2 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "credits"
flat = false
align = 1
script = ExtResource( 3 )
_sections_unfolded = [ "Theme" ]

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." index="4"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = true
max_distance = 2000.0
attenuation = 1.0
bus = "Master"
area_mask = 1

[node name="AnimatedSprite" type="AnimatedSprite" parent="." index="5"]

position = Vector2( 180, 420 )
scale = Vector2( 4.35417, 4.35417 )
frames = ExtResource( 5 )
animation = "idle"
frame = 2
playing = true

[node name="Label" type="Label" parent="." index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 3.0
margin_top = 30.0
margin_right = 355.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "El Gran Tomatero"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="button_up" from="start_button" to="start_button" method="_on_Button_button_up"]

[connection signal="button_up" from="shop_button" to="shop_button" method="_on_shop_button_button_up"]

[connection signal="button_up" from="credits_button" to="credits_button" method="_on_credits_button_button_up"]


